Fix for issue #112 - make looped resources more obvious by annotating them in CSS and providing an overridable macro

--- a/elda-assets/src/main/webapp/velocity/css/site.css
+++ b/elda-assets/src/main/webapp/velocity/css/site.css
@@ -216,6 +216,13 @@ ul.resource-properties {
   margin-left: -5px;
 }
 
+/* Loop in graph */
+
+.loop h3.resource-label:before {
+  font-family: FontAwesome;
+  content: "\F112 ";
+}
+
 /* Literal lists */
 
 .literal li.literal {
