--- a/elda-assets/src/main/webapp/velocity/macros/item.vm
+++ b/elda-assets/src/main/webapp/velocity/macros/item.vm
@@ -8,27 +8,56 @@
 ## Display an RDF resource
 #macro( showRdfResource $hnode, $elem, $level )
   #set( $resource = $hnode.rdfNode() )
-  #if( $level.equals( "outer" ))
-    <$elem class="rdf resource $level" id="$resource.shortUniqueID()">
-      <div class="row">
-        #itemName( $resource, "h1", "col-md-12" )
-        #itemURI( $resource, "h2", "col-md-12" )
-        #itemTypes( $resource, "col-md-12" )
-        #itemVisualExtension( $hnode )
-        #itemProperties( $hnode, $level )
-      </div>
-    </$elem>
-  #else
-    <$elem class="rdf resource $level">
-      #itemName( $resource, "h3", "", $hnode )
-      #itemURI( $resource, "h4", "" )
-      #itemTypes( $resource )
-      #itemVisualExtension( $hnode, "row" )
-      <div class="row">
-        #itemProperties( $hnode, $level )
-      </div>
-    </$elem>
+  #set( $cssLeaf = "" )
+  #set( $isLeaf = false )
+
+  #if( $hnode.children().size() == 0 )
+    #set( $cssLeaf = " leaf" )
+    #set( $isLeaf = true )
   #end
+
+  #if( $level.equals( "outer" ))
+    #showRdfResourceOuter( $hnode, $elem, $level )
+  #elseif( $isLeaf && $hnode.isLoop() )
+    #showRdfResourceLoop( $hnode, $elem, $level )
+  #else
+    #showRdfResourceNested( $hnode, $elem, $level )
+  #end
+#end
+
+## Display a top-level resource, which includes setting the resource ID
+## for in-page linking
+#macro( showRdfResourceOuter $hnode, $elem, $level )
+  <$elem class="rdf resource $level $cssLeaf" id="$resource.shortUniqueID()">
+    <div class="row">
+      #itemName( $resource, "h1", "col-md-12" )
+      #itemURI( $resource, "h2", "col-md-12" )
+      #itemTypes( $resource, "col-md-12" )
+      #itemVisualExtension( $hnode )
+      #itemProperties( $hnode, $level )
+    </div>
+  </$elem>
+#end
+
+## Display a nested but non-terminal resource
+#macro( showRdfResourceNested $hnode, $elem, $level )
+  <$elem class="rdf resource $level $cssLeaf">
+    #itemName( $resource, "h3", "", $hnode )
+    #itemURI( $resource, "h4", "" )
+    #itemTypes( $resource, "" )
+    #itemVisualExtension( $hnode, "row" )
+    <div class="row">
+      #itemProperties( $hnode, $level )
+    </div>
+  </$elem>
+#end
+
+## Display a terminal loop resource
+#macro( showRdfResourceLoop $hnode, $elem, $level )
+  <$elem class="rdf resource $level $cssLeaf loop">
+    #itemName( $resource, "h3", "", $hnode )
+    #itemURI( $resource, "h4", "" )
+  </$elem>
 #end
 
 ## Display the name of the resource
