--- a/_includes/nav-menu.html
+++ b/_includes/nav-menu.html
@@ -1,7 +1,13 @@
+{% if page.url contains "current" %}
+	{% assign version = "current" %}
+{% else %}
+	{% assign version = {{eldaName | prepend: "docs/"}} %}
+{% endif %}
+
 <ul class="nav navbar-nav">
   <li class=""><a href="{{ site.baseurl }}/index.html"><i class="fa fa-home"></i></a></li>
-  <li class="{% if page.url contains 'index.html' %}active{% endif %}"><a href="{{ site.baseurl }}/current/index.html">Quick start</a></li>
-  <li class="{% if page.url contains 'reference.html' %}active{% endif %}"><a href='{{ site.baseurl }}/current/reference.html'>Reference</a></li>
-  <li class="{% if page.url contains 'cribsheet.html' %}active{% endif %}"><a href='{{ site.baseurl }}/current/cribsheet.html'>Cribsheet</a></li>
-  <li class="{% if page.url contains 'velocity.html' %}active{% endif %}"><a href='{{ site.baseurl }}/current/velocity.html'>Velocity renderer</a></li>
+  <li class="{% if page.url contains 'index.html' %}active{% endif %}"><a href="{{ site.baseurl }}/{{version}}/index.html">Quick start</a></li>
+  <li class="{% if page.url contains 'reference.html' %}active{% endif %}"><a href='{{ site.baseurl }}/{{version}}/reference.html'>Reference</a></li>
+  <li class="{% if page.url contains 'cribsheet.html' %}active{% endif %}"><a href='{{ site.baseurl }}/{{version}}/cribsheet.html'>Cribsheet</a></li>
+  <li class="{% if page.url contains 'velocity.html' %}active{% endif %}"><a href='{{ site.baseurl }}/{{version}}/velocity.html'>Velocity renderer</a></li>
 </ul>
