Some additional tweaks towards resolving issue #115 - don't show bNode ID in header

--- a/elda-assets/src/main/webapp/velocity/css/site.css
+++ b/elda-assets/src/main/webapp/velocity/css/site.css
@@ -219,6 +219,17 @@ ul.resource-properties {
   background-color: #3f51b5;
   padding: 3px;
   border-radius: 3px;
+  line-height: normal;
+}
+
+.nested h3.anonymous {
+  font-size: 10pt;
+  margin: 0;
+  color: #eee;
+  background-color: #3f51b5;
+  padding: 3px;
+  border-radius: 3px;
+  line-height: normal;
 }
 
 .rdf.resource.nested .rdf.object {
