Disabled code to add trailing suffix to resource hrefs

--- a/elda-assets/src/main/webapp/velocity/macros/item.vm
+++ b/elda-assets/src/main/webapp/velocity/macros/item.vm
@@ -244,19 +244,19 @@
     #set( $retainSuffix = true )
   #end
 
-  #if( $retainSuffix )
-    #set( $trailingSlash = false )
-    #if( $href.endsWith( "/" ) )
-      #set( $trailingSlash = true )
-      #set( $href = $href.replace( "/$", "" ) )
-    #end
+  ##if( $retainSuffix )
+    ##set( $trailingSlash = false )
+    ##if( $href.endsWith( "/" ) )
+      ##set( $trailingSlash = true )
+      ##set( $href = $href.replace( "/$", "" ) )
+    ##end
 
-    #set( $href = $href + "." + $_suffix.spelling() )
+    ##set( $href = $href + "." + $_suffix.spelling() )
 
-    #if( $trailingSlash )
-      #set( $href = $href + "/" )
-    #end
-  #end
+   ##if( $trailingSlash )
+      ##set( $href = $href + "/" )
+    ##end
+  ##end
 #end
 
 ## Show the actions menu for this value
