--- a/elda-assets/src/main/webapp/velocity/partials/global-constants.vm
+++ b/elda-assets/src/main/webapp/velocity/partials/global-constants.vm
@@ -12,7 +12,7 @@
 ## Commonly used properties
 #set( $longitudeP = "http://www.w3.org/2003/01/geo/wgs84_pos#long" )
 #set( $latitudeP = "http://www.w3.org/2003/01/geo/wgs84_pos#lat" )
-#set( $latLongProps = [$longitudeP, $latitudeP ] )
+#set( $longLatProps = [$longitudeP, $latitudeP ] )
 
 #set( $eastingP = "http://data.ordnancesurvey.co.uk/ontology/spatialrelations/easting" )
 #set( $northingP = "http://data.ordnancesurvey.co.uk/ontology/spatialrelations/northing" )
