--- a/elda-assets/src/main/webapp/velocity/partials/content-detection.vm
+++ b/elda-assets/src/main/webapp/velocity/partials/content-detection.vm
@@ -1,5 +1,6 @@
 ## Set variables based on contents of the display resources
-#set( $latLongResources = $page.resourcesWithAllProperties( $latLongProps ))
-#if( $latLongResources.size() > 0 )
+#set( $longLatResources = $page.resourcesWithAllProperties( $longLatProps ))
+#set( $eastingNorthingResources = $page.resourcesWithAllProperties( $osgb36Props ))
+#if( $longLatResources.size() > 0 || $eastingNorthingResources.size() > 0)
   #set( $mapDisplay = true )
 #end
