Revisions of license display code.
The ResultSet returns a set of Resource rather than a set of String.
The Resources have properties from the data or config that can be
used to control the layout of a liscense object.

For the moment the expansion of the desription is done in the VelocityRending
class but it will be moved to a velocity macro file.

--- a/elda-assets/src/main/webapp/velocity/partials/footer.vm
+++ b/elda-assets/src/main/webapp/velocity/partials/footer.vm
@@ -1,6 +1,7 @@
 <footer>
   <div class="row">
     <div class="col-md-12">
+        
       #set( $proc = $page.metadata().processor() )
       Produced by
       <a href="$proc.homePage()">$proc.name()</a>
@@ -9,6 +10,13 @@
       <a href="http://www.epimorphics.com">Epimorphics</a>
       of the
       <a href="http://code.google.com/p/linked-data-api">Linked Data API</a>.
+      
+      #if ($_licenses)
+        #foreach ($l in $_licenses)
+            <div> $l </div>
+        #end
+      #end
+      
     </div>
   </div>
 </footer>
