Added search example.

--- a/_includes/nav-menu.html
+++ b/_includes/nav-menu.html
@@ -10,4 +10,5 @@
   <li class="{% if page.url contains 'reference.html' %}active{% endif %}"><a href='{{ site.baseurl }}/{{version}}/reference.html'>Reference</a></li>
   <li class="{% if page.url contains 'cribsheet.html' %}active{% endif %}"><a href='{{ site.baseurl }}/{{version}}/cribsheet.html'>Cribsheet</a></li>
   <li class="{% if page.url contains 'velocity.html' %}active{% endif %}"><a href='{{ site.baseurl }}/{{version}}/velocity.html'>Velocity renderer</a></li>
+  <li class="{% if page.url contains 'search-example.html' %}active{% endif %}"><a href='{{ site.baseurl }}/{{version}}/search-example.html'>Text Search Example</a></li
 </ul>
