Fix use of obsolete escapeHtml call

--- a/elda-assets/src/main/webapp/velocity/macros/item.vm
+++ b/elda-assets/src/main/webapp/velocity/macros/item.vm
@@ -215,7 +215,7 @@
 ## Show a literal-value
 #macro( propertyObjectLiteral $lit )
   <div class="rdf object literal">
-    $esc.escapeHtml( $lit.getLexicalForm() )
+    $esc.escapeHtml4( $lit.getLexicalForm() )
   </div>
 #end
 
